# gcs-trigger-function

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  run-locally.sh
config/: config.yaml
src/gcs_trigger_function/: bigquery.py  config.py  gbq.py  gcs.py  google.py  storage.py
