[tool.poetry]
name = "gcs-trigger-function"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google = "^3.0.0"
functions-framework = "^3.8.2"
loguru = "^0.7.3"
google-auth = "^2.38.0"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.31.0"
google-cloud-storage = "^3.1.0"
pyyaml = "^6.0.2"
pydantic = "^2.11.1"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"